TFP-6390 bruk inntekt v2 (#2707)
* TFP-6390 bruk inntekt v2

* feil filnavn for enum